--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "files": [
         "dist"
     ],
-    "author": "CNLHB <1348844909@qq.com>",
+    "author": "Damons7 <1461264388@qq.com>",
     "repository": {
         "type": "git",
         "url": ""
